styles.css
*{
    background-color: rgb(192, 143, 7);
    font-family: Arial, 'Verdana', Tahoma;
}
h1 {
    color:black;
    text-align: center;
    ;
}
p {
    text-align: center;
}
ul {
    text-align: center;
}

li{
    text-align: center;
}

ol{
    text-align: center;
}

b{
    text-align: center;
}
.center{
margin-left: auto;
margin-right: auto;
display: block;
}
.center2 {
display: block;
margin-left: auto;
margin-right: auto;
width: 50%;
}

